# better-drf-template

./: .dockerignore  Dockerfile  README.md  docker-compose.backend.yaml  docker-compose.services.yaml  docker-compose.yaml  local.env  pyproject.toml
foobar/: it.py  manage.py  start.sh
foobar/api/: urls.py  views.py
foobar/foobar/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
foobar/shared/: db_model.py
