[project]
name = "t8787"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-guid>=3.5.1",
    "django-storages[s3]>=1.14.6",
    "django-stubs-ext>=5.2.0",
    "djangorestframework>=3.16.0",
    "djoser>=2.3.1",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "uvicorn-worker>=0.3.0",
    "dj-database-url>=2.1.0",
    "psycopg[binary,pool]>=3.2.9",
    "django-redis>=5.4.0",
    "django-tasks-scheduler>=4.0.3",
    "django-constance[redis]>=4.3.2",
    "django-cachalot>=2.8.0",
    "sentry-sdk[django]>=2.29.1",
    "hiredis>=3.2.1",
    "django-enum>=2.2.3",
]
